--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
 	font-family: 'Titillium Web', sans-serif;
 	margin: 0px;
 	padding: 0px;
-	background-color: #101325
+	background-color: #090a14;
 }
 
 ::-moz-selection {
@@ -169,7 +169,7 @@ ul {
 	text-transform: capitalize;
 	font-weight: 600;
 	margin-bottom: 0;
-	color: #FFD15A
+	color: goldenrod;
 }
 
 .section-heading-1 h2 {
@@ -186,7 +186,7 @@ ul {
 	content: '';
 	left: 0;
 	bottom: -15px;
-	background-color: #FFD15A;
+	background-color: goldenrod;
 	height: 4px;
 	width: 50px;
 }
@@ -231,7 +231,7 @@ ul {
 	text-transform: capitalize;
 	font-weight: 600;
 	margin-bottom: 0;
-	color: #FFD15A
+	color: goldenrod;
 }
 
 .section-heading-3 h2 {
@@ -248,7 +248,7 @@ ul {
 	content: '';
 	left: 50%;
 	bottom: -15px;
-	background-color: #FFD15A;
+	background-color: goldenrod;
 	height: 4px;
 	width: 50px;
 	-webkit-transform: translateX(-50%);
@@ -364,7 +364,7 @@ ul {
 	right: 0;
 	width: 100%;
 	z-index: 99;
-	background-color: rgba(33, 32, 71);
+	background-color: #212529;
 	-webkit-box-shadow: 0px 0px 4px rgba(2, 5, 21, 0.7);
 	box-shadow: 0px 0px 50px rgba(2, 5, 21, 0.7);
 	-webkit-transition: all 1s ease 0s;
@@ -426,7 +426,7 @@ ul {
 	position: absolute;
 	left: 0;
 	top: 0;
-	background-color: rgba(33, 32, 71, 0.7);
+	background-color: rgb(5 5 10 / 70%);
 	height: 100vh;
 	width: 100%
 }
@@ -447,7 +447,7 @@ ul {
 }
 
 .intro-text h1 span {
-	color: #FFD15A
+	color: goldenrod;
 }
 
 .intro-text p {
@@ -469,7 +469,7 @@ ul {
 }
 
 .learnmore .skill-btn {
-	background-color: #FFD15A;
+	background-color: goldenrod;
 	-webkit-box-shadow: 0px 4px 64px rgba(255, 209, 90, 0.46);
 	box-shadow: 0px 4px 64px rgba(255, 209, 90, 0.46);
 	border-radius: 50px;
@@ -507,7 +507,7 @@ ul {
 	overflow: hidden;
 	border-bottom-left-radius: 64% 62%;
 	border-bottom-right-radius: 50% 10%;
-	background-color: rgba(32, 33, 66, 0.7);
+	background-color: rgb(33 37 41);
 	position: relative
 }
 
@@ -556,7 +556,7 @@ ul {
 }
 
 .about-button a:last-child {
-	background-color: #FFD15A;
+	background-color: goldenrod;
 	padding: 12px 30px;
 	color: #212047;
 	text-transform: capitalize;
@@ -604,7 +604,7 @@ ul {
 }
 
 .progressbar-title {
-	color: #FFD15A;
+	color: goldenrod;
 	font-size: 35px;
 	margin: 0px 0 10px;
 	text-transform: uppercase;
@@ -624,7 +624,7 @@ ul {
 .progress .progress-bar {
 	-webkit-animation: progress 3s;
 	animation: progress 3s;
-	background-color: #FFD15A
+	background-color: goldenrod;
 }
 
 @-webkit-keyframes progress {
@@ -655,7 +655,7 @@ ul {
 
 /*5.1 single service*/
 .single-services {
-	background-color: #212047;
+	background-color: #212529;
 	padding: 50px 30px;
 	border-radius: 10px;
 }
@@ -742,9 +742,8 @@ ul {
 
 /*6.1 single counter*/
 .single-count-area {
-	color: #FFD15A;
+	color: goldenrod;
 	text-transform: uppercase;
-
 }
 
 .single-count-area span {
@@ -755,7 +754,7 @@ ul {
 .single-count-area strong {
 	font-size: 40px;
 	font-weight: 700;
-	color: #FFD15A
+	color: goldenrod;
 }
 
 .single-count-area p {
@@ -930,7 +929,7 @@ ul {
 
 .experience-content h4 {
 	text-transform: uppercase;
-	color: #FFD15A;
+	color: goldenrod;
 	font-size: 23px
 }
 
@@ -1274,7 +1273,7 @@ ul {
 /*==========11. Footer Area CSS==========*/
 
 .mian-footer {
-	background-color: #202142;
+	background-color: #212529;
 	padding: 100px 0;
 	position: relative;
 	border-top-left-radius: 45% 4%;
@@ -1379,14 +1378,14 @@ ul {
 
 /*11.3 copyright text*/
 .copyright {
-	background-color: #101325;
+	background-color: #090a14;
 	padding: 15px 0;
 	text-align: center;
 	position: relative;
 }
 
 .copyright p {
-	color: #FFD15A;
+	color: goldenrod;
 }
 
 .copyright a {
