--- a/style.css
+++ b/style.css
@@ -318,7 +318,8 @@ ul {
 
 /*2.1 main menu*/
 .main-menu ul {
-	text-align: right
+	text-align: right;
+	/* flex-flow: row-reverse; */
 }
 
 .main-menu ul li {
@@ -330,7 +331,7 @@ ul {
 .main-menu ul li a {
 	color: #fff;
 	display: inline-block;
-	text-transform: capitalize;
+	text-transform: uppercase;
 	font-size: 18px;
 	line-height: 1;
 	-webkit-transition: .5s;
@@ -364,7 +365,7 @@ ul {
 	right: 0;
 	width: 100%;
 	z-index: 99;
-	/* background-color: rgba(33, 32, 71); */
+	background-color: rgb(8 8 30);
 	-webkit-box-shadow: 0px 0px 4px rgba(2, 5, 21, 0.7);
 	box-shadow: 0px 0px 50px rgba(2, 5, 21, 0.7);
 	-webkit-transition: all 1s ease 0s;
