--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -570,7 +570,7 @@ import '../styles/style.css'
 					<li>
 						<div class="experience-content ml-ec" data-aos="fade-in" data-aos-offset="100"
 						data-aos-easing="ease-in-sine" data-aos-duration="800">
-						<h4>Office of the Superintendent of Financial Institutions</h4>
+						<h4>Government of Canada</h4>
 						<span>Network & Security Specialist</span>
 						<p>June 2021 – Present<br>
 							Managed and secured cloud/hybrid infrastructure, IAM (Azure AD/ADFS), and network
@@ -587,7 +587,7 @@ import '../styles/style.css'
 					<li>
 						<div class="experience-content mr-ec" data-aos="fade-in" data-aos-offset="100"
 						data-aos-easing="ease-in-sine" data-aos-duration="800">
-						<h4>Statistics Canada</h4>
+						<h4>Government of Canada</h4>
 						<span>Platform Optimization Specialist</span>
 						<p>November 2020 – June 2021<br>
 							Operated secure analytics platforms with Linux, Azure, Kubernetes, and Docker.
@@ -608,7 +608,7 @@ import '../styles/style.css'
 					<!-- Systems & Security Administrator -->
 					<li>
 						<div class="experience-content ml-ec">
-						<h4>City of Laval</h4>
+						<h4>Government agency</h4>
 						<span>Systems & SecOps Architect</span>
 						<p>November 2008 – January 2020<br>
 							Administered Windows, Linux, and Unix servers,Sharepoint, Cloud, Symantec security, certificates,
